fix createTournament handler
