# server/docs/swagger.yaml
@@ -566,32 +566,6 @@ paths:
       summary: Get current auth session
       tags:
       - authentication
-  /tournament:
-    post:
-      consumes:
-      - application/json
-      description: Create a new tournament
-      parameters:
-      - description: createTurnamentRequest object
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/handler.createTurnamentRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/types.ReturnTournament'
-        "400":
-          description: bad data, tournament alredy open
-        "500":
-          description: internal server error
-      summary: Create a new tournament
-      tags:
-      - tournament
   /tournament/{tournament_id}:
     delete:
       consumes:
@@ -659,6 +633,32 @@ paths:
         "404":
           description: tournament not found
       summary: Join a tournament
+      tags:
+      - tournament
+  /tournament/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a new tournament
+      parameters:
+      - description: createTurnamentRequest object
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.createTurnamentRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/types.ReturnTournament'
+        "400":
+          description: bad data, tournament alredy open
+        "500":
+          description: internal server error
+      summary: Create a new tournament
       tags:
       - tournament
 swagger: "2.0"
